# web3tg

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  tea.yaml
web3tg/: main.py
web3tg/callbacks/: __init__.py  main_callbacks.py  onchain_tasks_callbacks.py  profiles_tasks_callbacks.py  social_tasks_callbacks.py  zora_callbacks.py
web3tg/data/: __init__.py  save.py  subloader.py
web3tg/extra/: accounts.py  capmonster.py  ds.py  imap.py  tasks.py  tw.py  web3.py
web3tg/handlers/: __init__.py  basic_commands.py  onchain_tasks_commands.py  profiles_tasks_commands.py  social_tasks_commands.py  user_commands.py
web3tg/keyboards/: __init__.py  fabrics.py
web3tg/middlewares/: __init__.py  is_admin.py
web3tg/utils/: __init__.py  accounts.py  bot_commands.py  capmonster.py  db.py  ds.py  env.py  extra.py  imap.py  logger.py  models.py  onchain_tasks.py  other.py  prompt.txt  social_tasks.py  states.py  tasks.py  tw.py
web3tg/utils/data/: twitters.txt
