[tool.poetry]
name = "web3tg"
version = "0.0.1"
description = ""
authors = ["timertimertimer <timerkhan2002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
g4f = "^0.2.9.9"
loguru = "^0.7.2"
web3db = "^1.0.0"
aiogram = "^3.4.1"
aiofiles = "^23.2.1"
aioimaplib = "^1.0.1"
tweepy-self = "^1.9.0"
better-proxy = "^1.1.5"
aiohttp-proxy = "^0.1.2"
python-dotenv = "^1.0.1"
capmonstercloudclient = "^1.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
