[tool.poetry]
name = "web3tg"
version = "0.1.0"
description = "Private bot for interacting with socials and profiles from web3db"
authors = ["timertimertimer <timerkhan2002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
g4f = "^0.2.9.9"
loguru = "^0.7.2"
aiogram = "^3.4.1"
tweepy-self = "^1.11.1"
better-proxy = "^1.1.5"
aiohttp-proxy = "^0.1.2"
python-dotenv = "^1.0.1"

web3db = { git = "https://github.com/timertimertimer/web3db.git" }
web3mt = { git = "https://github.com/timertimertimer/web3mt.git" }

[tool.poetry.group.local.dependencies]
web3db = { path = "../web3db" }
web3mt = { path = "../web3mt" }

[tool.poetry.scripts]
web3tg = "web3tg.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
